# BlackBox

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
docs/: implementation.md  spec.md
src/: DesktopApp.vue  router.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: SystemBlackBox.wprp
src-tauri/src/: ai.rs  analysis.rs  auto_trigger.rs  capabilities.rs  collector.rs  lib.rs  main.rs  recovery.rs  service.rs  storage.rs  wpr.rs
src/components/: ConfirmDialog.vue  DesktopSelect.vue
src/stores/: app.ts
